--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,15 @@
 @import "https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css";
+
+.subtitle {
+    font-size: 1.7em;
+    width: max-content;
+    margin-left: auto;
+    margin-right: auto;
+    background: #3a600973;
+    border-radius: 20px;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-top: 5px;
+    padding-bottom: 10px;
+    color: #fff;
+}
