--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,94 @@
 @import "https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css";
 
+:root {
+    --gold: #86754D;
+    --blue1: #002F56;
+    --blue2: #00538A;
+    --blue3: #00BEDD;
+    --grey1: #333D47;
+    --black1: #10181F;
+    --red1: #EC0044;
+    --red2: #AC063C;
+  }
+  
 .subtitle {
-    font-size: 1.7em;
+    font-size: 3.0em;
+    font-family: Mr De Haviland;
     width: max-content;
     margin-left: auto;
     margin-right: auto;
-    background: #3a600973;
-    border-radius: 20px;
     padding-left: 20px;
     padding-right: 20px;
     padding-top: 5px;
-    padding-bottom: 10px;
-    color: #fff;
+    color: var(--blue3);
+}
+
+.hero-head {
+    background: var(--blue1);
+}
+
+.hero-img {
+    position: relative;
+}
+
+.navbar-item {
+    color: var(--blue3);
+}
+
+.body {
+    background: var(--blue1);
+}
+
+.logo-display {
+    position: absolute;
+    margin-left: auto;
+    margin-right: auto;
+    left: 0;
+    right: 0;
+    width: 400px;
+    top: 50%;
+    transform: translateY(-50%);
+    background: var(--blue1);
+    border-radius: 20px;
+
+}
+
+.shop-details {
+    line-height: 2.5em;
+    border: 3px solid var(--gold);
+    padding: 20px;
+    border-radius: 5px;
+    max-width: 500px;
+}
+.shop-details .label {
+    font-weight: bold;
+    width:100px;
+    float:left;
+}
+.shop-details input {
+    float:left;
+    margin-top: 8px;
+    width: 300px;
+}
+
+.shop-submit {
+    float: right;
+    border:1px solid var(--gold);
+    border-radius: 3px;
+    height: 45px;
+    width: 80px;
+    background: var(--blue3);
+    text-align: center;
+    margin-bottom: 10px;
+    cursor: pointer;
+}
+
+.row {
+    clear: both;
+}
+
+.content-img {
+    border-radius: 5px;
+    -webkit-filter: drop-shadow(5px 5px 5px var(--blue1));
+    filter: drop-shadow(5px 5px 5px var(--blue1));
 }
