--- a/css/style.css
+++ b/css/style.css
@@ -20,19 +20,31 @@
     padding-left: 20px;
     padding-right: 20px;
     padding-top: 5px;
-    color: var(--blue3);
+    color: #fff;
+    background: var(--red1);
+    width: 100%;
+    border-radius: 0px 0px 20px 20px;
+    text-align: center;
 }
-
+ .navbar {
+     min-height: 5em;
+    }
+    .navbar-menu {
+        font-size: 1.8em;
+    }
 .hero-head {
     background: var(--blue1);
 }
 
 .hero-img {
     position: relative;
+    opacity: 0.6;
 }
 
 .navbar-item {
     color: var(--blue3);
+
+    padding-right: 40px;
 }
 
 .body {
@@ -48,14 +60,14 @@
     width: 400px;
     top: 50%;
     transform: translateY(-50%);
-    background: var(--blue1);
+    background: var(--blue3);
     border-radius: 20px;
 
 }
 
 .shop-details {
     line-height: 2.5em;
-    border: 3px solid var(--gold);
+    border:2px solid var(--blue1);
     padding: 20px;
     border-radius: 5px;
     max-width: 500px;
@@ -73,13 +85,11 @@
 
 .shop-submit {
     float: right;
-    border:1px solid var(--gold);
+    border:1px solid var(--blue1);
     border-radius: 3px;
-    height: 45px;
     width: 80px;
     background: var(--blue3);
     text-align: center;
-    margin-bottom: 10px;
     cursor: pointer;
 }
 
