--- a/css/style.css
+++ b/css/style.css
@@ -43,8 +43,8 @@
 
 .navbar-item {
     color: var(--blue3);
-
-    padding-right: 40px;
+    padding-left: 20px;
+    padding-right: 20px;
 }
 
 .body {
@@ -65,25 +65,26 @@
 
 }
 
-.shop-details {
+.form-details {
     line-height: 2.5em;
     border:2px solid var(--blue1);
     padding: 20px;
     border-radius: 5px;
     max-width: 500px;
 }
-.shop-details .label {
+.form-details .label {
     font-weight: bold;
     width:100px;
     float:left;
 }
-.shop-details input {
+.form-details input {
     float:left;
     margin-top: 8px;
     width: 300px;
+    height: 2.1em;
 }
 
-.shop-submit {
+.form-submit {
     float: right;
     border:1px solid var(--blue1);
     border-radius: 3px;
@@ -102,3 +103,36 @@
     -webkit-filter: drop-shadow(5px 5px 5px var(--blue1));
     filter: drop-shadow(5px 5px 5px var(--blue1));
 }
+
+.hidden {
+    visibility: hidden;
+}
+
+.no-border {
+    border : none;
+}
+
+.busy {
+    width: 100px;
+    border: 5px solid var(--blue3);
+    border-left-color: var(--blue2);
+    border-radius: 50%;
+    background: transparent;
+    animation-name: rotate-s-loader;
+    animation-iteration-count: infinite;
+    animation-duration: 1s;
+    animation-timing-function: linear;
+    position: relative;    
+    height:100px;
+    margin-left:auto;
+    margin-right: auto;
+}
+
+@keyframes rotate-s-loader {
+    from {
+      transform: rotate(0);
+    }
+    to {
+      transform: rotate(360deg);
+    }
+  }
