--- a/css/style.css
+++ b/css/style.css
@@ -36,22 +36,47 @@
 .hero-head{
     background: var(--blue1);
 }
-.hero-head::after {
+/* .hero-head::after {
     background-image:url("https://www.six-strings.com.au/img/border-square.svg");
     content: " ";
     display: block;
     height: 3px;
     width: 100%;
-}
+} */
 
     .navbar-menu {
         font-size: 1.8em;
     }
 
-.hero-img {
+/* .hero-img {
     position: relative;
-}
+} */
 
+.hero-img-p {
+    height: 100%;
+    top:50px;
+    position: absolute;
+}
+@media only screen and (max-width: 800px) {
+ .hero-img {
+     visibility : collapse;
+    }
+    .hero-img-p {
+        visibility : visible;
+       }
+     }
+
+     @media only screen and (min-width: 801px) {
+        .hero-img {
+            visibility : visible;
+            height: 100%;
+            overflow: hidden;;
+           }
+           .hero-img-p {
+               visibility : collapse;
+              }
+            }
+       
 .navbar-item {
     color: var(--blue3);
     padding-left: 20px;
