--- a/css/style.css
+++ b/css/style.css
@@ -76,6 +76,10 @@
                visibility : collapse;
               }
             }
+
+            .content {
+                margin-left:15px;
+            }
        
 .navbar-item {
     color: var(--blue3);
@@ -114,7 +118,13 @@
     background: var(--blue3);
     text-align: center;
     cursor: pointer;
+    margin-bottom: 10px;
 }
+
+.navbar-burger span {
+    left: calc(50% - 15px);
+    width: 30px;
+ }
 
 .row {
     clear: both;
@@ -149,6 +159,11 @@
     margin-left:auto;
     margin-right: auto;
 }
+
+.navbar-burger {
+    color: #fff;
+}
+
 
 @keyframes rotate-s-loader {
     from {
